--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -28,6 +28,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
 -->
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+    <display-name>3MEditor</display-name>
     <context-param>
         <description>eXist database URI. Change IP and port according to your eXist setup.</description>
         <param-name>DBURI</param-name>
@@ -121,12 +122,12 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
         <param-name>sourceAnalyzerStatus</param-name>
         <param-value>on</param-value>
     </context-param>
-     <context-param>
+    <context-param>
         <description>Default generators status. Values accepted:auto, manual.</description>
         <param-name>generatorsStatus</param-name>
         <param-value>manual</param-value>
     </context-param>
-     <context-param>
+    <context-param>
         <description>X3ML engine built in Instance Generator names</description>
         <param-name>instanceGeneratorNamesBuiltInX3MLEngine</param-name>
         <param-value>UUID, Literal</param-value>
