Fixed a source analyzer bug and started working on MS.
Fixed "Source Analyzer enabling when editing first domain value" bug.
Started working on Mapping Suggester integration.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -128,6 +128,11 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
         <param-value>on</param-value>
     </context-param>
     <context-param>
+        <description>Default mapping suggester status. Values accepted:on,off.</description>
+        <param-name>mappingSuggesterStatus</param-name>
+        <param-value>off</param-value>
+    </context-param>
+    <context-param>
         <description>Default generators status. Values accepted:auto, manual.</description>
         <param-name>generatorsStatus</param-name>
         <param-value>auto</param-value>
