Added a new generator named "ConcatMultipleTerms" with its args. Added lastModified info in admin part
Added a new generator named "ConcatMultipleTerms" with its args. Added
lastModified info in admin part when closing mapping. Changed links font
color.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -140,7 +140,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <context-param>
         <description>X3ML engine built in Generator names</description>
         <param-name>generatorNamesBuiltInX3MLEngine</param-name>
-        <param-value>Constant, Literal, prefLabel, UUID</param-value>
+        <param-value>Constant, Literal, prefLabel, UUID, ConcatMultipleTerms</param-value>
     </context-param>
     
     <filter>
