--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -106,6 +106,11 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
         <param-value>C:\\Projects\\3M\\Schema\\</param-value>
     </context-param>
     <context-param>
+        <description>Server folder to store target record files generated in Transformation tab. Change according to your setup.</description>
+        <param-name>targetRecordsFolder</param-name>
+        <param-value>C:\\Projects\\3M\\rdf_visualizer_files\\</param-value>
+    </context-param>
+    <context-param>
         <description>Maximum number of xml documents stored in one collection.</description>
         <param-name>maxCollsize</param-name>
         <param-value>999</param-value>
