Adding extra info in web.xml to make Windows/Linux setup simpler. Removing useless targetRecordsFolder param.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -53,6 +53,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <context-param>
         <description>eXist database user password. Change according to your eXist setup.</description>
         <param-name>DBpassword</param-name>
+        <param-value>admin</param-value>        
         <!-- Linux setup
         <param-value>admin</param-value>
         -->
