Bug fixing (schemata_list schemas deleted and no refresh in transformation source when uploading new file)
Fixed Redmine Bug#177 (I have loaded a sample source file and I have
done a transform. I go to info tab,
change source file and immediately go to transform. It has still the old
file and I need to reload the screen.)
Also renewed 3MTidy jar to fix Redmina Bug#176 (Files contained in
schemata_list.xml deleted)

--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>com.github.isl</groupId>
             <artifactId>3MTidy</artifactId>
-            <version>65ebd42</version>
+            <version>-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.github.isl</groupId>
