--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>com.github.isl</groupId>
             <artifactId>Reasoner</artifactId>
-            <version>7c26fd7</version>
+            <version>-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.github.isl</groupId>
